--- a/src/index.css
+++ b/src/index.css
@@ -24,12 +24,13 @@ a:hover {
   color: #535bf2;
 }
 
+html,
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  ::-webkit-scrollbar {
+    width: 0px;
+  }
+  scrollbar-width: none;
+  -ms-overflow-style: none;
   overflow: hidden;
 }
 
@@ -68,6 +69,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-  
 }
-
