--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,14 @@ body {
 
   overflow: hidden;
 }
-
+/* iframe{
+  width: 100%;
+  height: 100%;
+  border: none;
+  overflow: hidden !important;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+} */
 #root {
   height: 100%;
   margin: 0;
@@ -22,10 +29,10 @@ body {
 
 
 .content {
-  margin-left: 242px;
+  margin-left: 280px;
   margin-top: 48px;
   padding: 0;
-  width: calc(100vw - 242px);
+  width: calc(100% - 242px);
   align-items: center;
   justify-content: center;
   display: flex;
