--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,16 @@ body {
   }
   scrollbar-width: none;
   -ms-overflow-style: none;
-  overflow: hidden;
+  overflow-y: hidden;
+}
+
+iframe{
+  width: 100%;
+  height: 100%;
+  border: none;
+  overflow: hidden !important;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 h1 {
